# deep-fusion

./: .gitignore  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  LICENSE  README.md  \  build.sh  makeall.sh  run_benchmark.sh  run_skx.sh
benchmark/: CMakeLists.txt  bench_common.cc  bench_common.h  bench_concat.cc  bench_concat_relu.cc  bench_conv.cc  common.cc  common.h
cmake/: simd.cmake  system.cmake
include/: .deepfusion.h.swp  deepfusion.h  jitinfer.h
src/: CMakeLists.txt  base_op.h  concat_op.cc  concat_op.h  deepfusion.cc  jit_call_conf.h  jit_concat_kernel.cc  jit_concat_kernel.h  jit_conv_kernel.cc  jit_conv_kernel.h  jit_conv_kernel_4_conv_pool.cc  jit_conv_kernel_4_conv_pool.h  jit_generator.h  jit_pool_kernel.cc  jit_pool_kernel.h  jitinfer.cc  jitinfer_common.h  jitinfer_thread.h  log.h  op_concat.cc  op_concat.h  op_conv.cc  op_conv.h  op_conv_pool_t.cc  op_conv_pool_t.h  util.cc  util.h
test/: .test_conv_relu_pooling.cc.swo  .test_conv_relu_pooling.cc.swp  CMakeLists.txt  main.cc  test_common.h  test_concat.cc  test_conv.cc  test_conv_relu_pooling.cc  test_log.cc  test_misc.cc  test_util.cc  test_utils.cc  test_utils.h
util/: deepfusion_utils.h  log.h  math_func.cc  memory.cc  omp_thread.h  scaffold.cc  util.cc  util.h  util_benchmark.cc  util_benchmark.h  util_deepfusion.cc  util_deepfusion.h  util_jitinfer.cc  util_jitinfer.h  util_mkldnn.cc  util_mkldnn.h  util_test.cc  util_test.h
